--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ main{
     margin: 5%;
 }
 
-/*Billedet på forsiden*/
 #mainbillede{
     background-image:url("images/agf.jpeg");
     background-size:cover;
@@ -20,7 +19,6 @@ section{
     gap: 10px;
 }
 
-/*Tekstens layout*/
 h1{
     font-weight: 2;
     text-transform: uppercase;
@@ -51,29 +49,41 @@ p{
     color: gray;
 }
 
-/* Flexbox cards*/
-.kortsection{
+.kortsectionone, .kortsectiontwo
+{
     display: flex;
     gap: 10px;
 }
 
-.kortsection div{
+.kortsectionone div, .kortsectiontwo div
+{
     height:300px;
     background-color:brown;
     border-radius:10px;
+}
+
+.kortsectionone div img, .kortsectiontwo div img{
     width: 100%;
 }
 
-.kortsection div img{
-    width: 100%;
-}
-
-.kortsection :hover{
+.kortsectionone :hover, .kortsectiontwo :hover{
     filter: brightness(120%);
     transition: 200ms;
 }
 
-/*cards under nyheder*/
+
+.kortsectionone div:first-child
+{
+    width: 60%;
+}
+
+.kortsectiontwo div:nth-child(2)
+{
+    width: 60%;
+}
+
+
+
 #fans{
     background-color:crimson;
     background-image: url(images/fans.jpg);
@@ -107,6 +117,7 @@ p{
     background-image: url(images/mål.jpg);
     background-size: cover;
     background-position: center;
+
 }
 
 #takle{
@@ -116,12 +127,14 @@ p{
     background-position: center;
 }
 
-#tekst{
+#tekst
+{
     background-color: rgba(0, 0, 0, 0.3);
     background-blend-mode: darken;
     width: 100%;
     height: 100%;
 }
+
 
 @media screen and (min-width:769px){
     .halv{
@@ -134,17 +147,40 @@ p{
 
 
 @media screen and (max-width:768px){
-    .kortsection {
+    .kortsectionone, .kortsectiontwo
+    {
         flex-direction:column;
         align-items:center;
         width: 100%;
     }
-    #tekst{
+    #tekst
+    {
         width: 100%;
     }
+    /*kort er 90% når vinduet er lille*/
+
+    /*række 1*/
+    .kortsectionone div:first-child
+    {width: 90%;}
+
+    .kortsectionone div:nth-child(2)
+    {width: 90%;}
+
+    .kortsectionone div:nth-child(3)
+    {width: 90%;}
+    /*række 2*/
+    .kortsectiontwo div:first-child
+    {width: 90%;}
+
+    .kortsectiontwo div:nth-child(2)
+    {width: 90%;}
+
+    .kortsectiontwo div:nth-child(3)
+    {width: 90%;}
+
+
 }
 
-/*cards under agf tv*/
 .tvsection{
     display: flex;
     justify-content: space-around;
@@ -166,7 +202,7 @@ p{
 }
 
 
-/* responsive agf tv*/
+
 @media screen and (max-width:768px){
     .tvsection {
         flex-direction:column;
@@ -201,7 +237,7 @@ Logo og burger */
 
 /* RESPONSIVE: */
 /* MOBIL: */
-@media screen and (max-width:1099px){
+@media screen and (max-width:1080px){
     /*Distribuer elementer anderledes:*/
     header{
         justify-content:space-between;
@@ -225,7 +261,7 @@ Logo og burger */
 }
 
 /* LAPTOP: */
-@media screen and (min-width: 1100px){
+@media screen and (min-width: 910px){
     /* HEADER: LOGO*/
     #logo {/* Logoet. Er i en div fordi det spiller bedre med flexbox. */
         width:200px;
