--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,23 @@ main{
     margin-bottom: 5%;
 }
 
+#bold{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    animation-name: bold;
+    animation-duration: 2s;
+}
+
+@keyframes bold{
+    0% {left:0px; top:50px;}
+    25% {left:200px; top:0px;}
+    50% {left:600px; top:20px;}
+    75% {left:800px; top:0px;}
+    100% {left:1200px; top:40px;}
+}
+
+
 section{
     gap: 10px;
 }
